--- a/FlexboxProperties/index.html
+++ b/FlexboxProperties/index.html
@@ -10,9 +10,9 @@
 
     <div class="container">
   
-        <div class="item">item</div>
-        <div class="item">item</div>
-        <div class="item">item</div>
+        <div class="item">Item</div>
+        <div class="item">Item</div>
+        <div class="item">Item</div>
     </div>
 </body>
 </html>
