--- a/FlexboxProperties/index.html
+++ b/FlexboxProperties/index.html
@@ -10,9 +10,16 @@
 
     <div class="container">
   
-        <div class="item">Item</div>
-        <div class="item">Item</div>
-        <div class="item">Item</div>
+        <div class="item">Item1</div>
+        <div class="item">Item2</div>
+        <div class="item">Item3</div>
+    </div>
+
+    <div class="container2">
+        <div class="box">Box1</div>
+        <div class="box">Box2</div>
+        <div class="box">Box3</div>
+        <div class="box">Box4</div>
     </div>
 </body>
 </html>
