--- a/FlexboxProperties/index.html
+++ b/FlexboxProperties/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
 
-    <div class="container">
+  <!-- <div class="container">
   
         <div class="item">Item1</div>
         <div class="item">Item2</div>
         <div class="item">Item3</div>
-    </div>
+    </div> 
 
     <div class="container2">
         <div class="box">Box1</div>
@@ -21,5 +21,18 @@
         <div class="box">Box3</div>
         <div class="box">Box4</div>
     </div>
+
+    -->
+
+    <div class="container3">
+   
+         <div class="kutu">box1</div>
+         <div class="kutu">box2</div>
+         <div class="kutu">box3</div>
+    
+        </div>
+
+
+
 </body>
 </html>
