--- a/FlexboxProperties/index.html
+++ b/FlexboxProperties/index.html
@@ -22,7 +22,7 @@
         <div class="box">Box4</div>
     </div>
 
-    -->
+  
 
     <div class="container3">
    
@@ -30,8 +30,21 @@
          <div class="kutu">box2</div>
          <div class="kutu">box3</div>
     
-        </div>
+        </div>  -->
 
+        <div class="container4">
+   
+            <div class="contain">box1</div>
+            <div class="contain">box2</div>
+            <div class="contain">box3</div>
+            <div class="contain">box4</div>
+            <div class="contain">box5</div>
+            <div class="contain">box6</div>
+            <div class="contain">box7</div>
+            <div class="contain">box8</div>
+            <div class="contain">box9</div>
+            <div class="contain">box10</div>
+           </div>
 
 
 </body>
