created css codes

--- a/FlexboxItemProperties/index.html
+++ b/FlexboxItemProperties/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="index2.css">
+    <link rel="stylesheet" href="index3.css">
+    <link rel="stylesheet" href="index4.css">
 </head>
 <body>
     
@@ -14,14 +16,30 @@
     <div class="item2">ITEM2</div>
     <div class="item3">ITEM3</div>
 
-</div> -->
+</div> 
 
 <div class="container2">
     <div class="box1">box1</div>
     <div class="box2">box2</div>
     <div class="box3">box3</div>
 
-</div>
+</div> 
+
+<div class="container3">
+    <div class="kutu1">box1</div>
+    <div class="kutu2">box2</div>
+    <div class="kutu3">box3</div>
+
+</div> -->
+
+<div class="container4">
+    <div class="x1">box1</div>
+    <div class="x2">box2</div>
+    <div class="x3">box3</div>
+
+</div> 
+
+
 
 </body>
 </html>
