--- a/FlexboxLayout/index.html
+++ b/FlexboxLayout/index.html
@@ -12,13 +12,14 @@
   <div class="container">
 
    <div class="header">
-    <h1>LOGO</h1>
+    <h2>LOGO</h2>
 
-    .<nav class="navbar">
+    <nav class="navbar">
         <a href="#"> Link1</a>
         <a href="#"> Link2</a>
         <a href="#"> Link3</a>
         <a href="#"> Link4</a>
+        <a href="#"> Link5</a>
     </nav>
     <button>Çıkış</button>
    </div>
@@ -26,7 +27,24 @@
 
    <div class="content">
 
-    content
+    <div class="left-side">
+
+        <div class="top"> 30%</div>
+        <div class="bottom">70%</div>
+
+    </div>
+
+   <div class="main">
+
+    <div class="cards"></div>
+
+
+    <div class="boxes"></div>
+
+    
+    <div class="images"></div>
+
+   </div>
 
    </div>
 
