updated css codes

--- a/FlexboxLayout/index.html
+++ b/FlexboxLayout/index.html
@@ -36,13 +36,49 @@
 
    <div class="main">
 
-    <div class="cards"></div>
+    <div class="cards">
+
+     <div class="card">
+        <p>Card Başlık</p>
+        <span>Card İçerik</span>
+     </div>
+
+     <div class="card">
+        <p>Card Başlık</p>
+        <span>Card İçerik</span>
+     </div>
+     <div class="card">
+        <p>Card Başlık</p>
+        <span>Card İçerik</span>
+     </div>
+     <div class="card">
+        <p>Card Başlık</p>
+        <span>Card İçerik</span>
+     </div>
+
+    </div>
 
 
-    <div class="boxes"></div>
+    <div class="boxes">
 
-    
-    <div class="images"></div>
+
+    <div class="box">box1</div>
+    <div class="box">box2</div>
+    <div class="box">box3</div>
+    <div class="box">box4</div>
+
+
+    </div>
+
+
+    <div class="images">
+   
+         <div class="image">image1</div>
+         <div class="image">image2</div>
+         <div class="image">image3</div>
+         <div class="image">image4</div>
+        
+    </div>
 
    </div>
 
