--- a/SignUpPage/index.html
+++ b/SignUpPage/index.html
@@ -4,9 +4,60 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <title>Sign-up form</title>
 </head>
 <body>
     
+ <div class="container">
+
+
+    <div class="left-side">
+
+     <div class="left-content">
+        <h1>Hoşgeldiniz</h1>
+        <p>Bizimle bağlantıda kalmak için lütfen personel bilgilerinizi  giriniz</p>
+   
+        <a  href="#">GİRİŞ</a>
+     </div>
+
+    </div>
+
+
+    <div class="right-side">
+
+     <div class="right-content">
+
+    
+         <h1>Hesap oluştur</h1>
+
+         <div class="links">
+            Linklerr gelecek
+         </div>
+
+         <p>veya kayıt için e-mailini kullan</p>
+  
+        <form class="form">
+
+       <input type="text" placeholder="Ad"/>
+       <input type="email" placeholder="Email"/>
+       <input type="password" placeholder="Şifre"/>
+
+       <button >KAYDOL</button>
+        </form>
+
+
+     </div>
+
+    </div>
+
+
+
+ </div>
+
+
+
 </body>
 </html>
