added css codes

--- a/SignUpPage/index.html
+++ b/SignUpPage/index.html
@@ -56,7 +56,7 @@
        </div>
        <div class="form-group">
          
-   
+         <img src="./img/password.png" alt="password">
        <input   class="input"  type="password" placeholder="Şifre"/>
        </div>
 
